--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,15 +6,18 @@ services:
     container_name: tg-ip-locator
     restart: unless-stopped
     volumes:
-      - ./data:/app/data
+      - tg_ip_data:/app/data
     ports:
       - "127.0.0.1:8080:8080"
     environment:
       - LOCATION=SG
-      - SCAN_INTERVAL=604800
     healthcheck:
       test: ["CMD", "curl", "-f", "http://localhost:8080/health"]
       interval: 30s
       timeout: 10s
       retries: 3
-      start_period: 40s 
+      start_period: 40s
+
+volumes:
+  tg_ip_data:
+    name: tg_ip_data 
